syntax = "proto3";

package manager;
option go_package = "protobuf/manager/golang/authpb";

import "google/protobuf/empty.proto";

message GetPublicKeyResponse {
  string public_key = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int32 access_expires_in = 3;
  int32 refresh_expires_in = 4;
}

message TokenVerifyRequest {
  string token = 1;
}

message TokenVerifyResponse {
  string user_id = 1;
  repeated string roles = 2;
  string token_type = 3;
}

service AuthService {
  rpc GetPublicKey (google.protobuf.Empty) returns (GetPublicKeyResponse);

  rpc Login (LoginRequest) returns (LoginResponse);

  rpc TokenVerify (TokenVerifyRequest) returns (TokenVerifyResponse);
}
